fix(react): overflow of message and minimum width of outermost div
Set the minimum width so that if on small screen then the user has to scroll horizontally to the right to view the remaining content.

--- a/React/src/Message.css
+++ b/React/src/Message.css
@@ -4,6 +4,7 @@
     font-size: 16px;
     padding: 10px;
     width: fit-content;
+    word-break: break-word;
     border-radius: 10px;
     background-color: white;
     margin-bottom: 30px;
